--- a/tests/integration/extensions/cassettes/test_langchain_chat/TestLangChainChat.test_async_generate.yaml
+++ b/tests/integration/extensions/cassettes/test_langchain_chat/TestLangChainChat.test_async_generate.yaml
@@ -21,25 +21,25 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/chat?version=2024-03-07
+    uri: https://api.com/v2/text/chat?version=2024-03-08
   response:
     body:
-      string: '{"id":"bff5b848-58ba-4e57-a992-bb87e5260907","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-07T20:36:50.483Z","results":[{"generated_text":"  NLP
-        stands for Natural Language Processing, which is a subfield of artificial
-        intelligence (AI","generated_token_count":20,"input_token_count":160,"stop_reason":"max_tokens","seed":849980025}],"conversation_id":"ad33c6da-2eb9-4b94-9fdb-74159787cd7b"}'
+      string: '{"id":"9592661d-c493-41b2-a620-0212b44cf99f","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-08T10:10:56.768Z","results":[{"generated_text":"  NLP
+        (Natural Language Processing) is a subfield of artificial intelligence that
+        deals","generated_token_count":20,"input_token_count":160,"stop_reason":"max_tokens","seed":1977231784}],"conversation_id":"ff7370ed-d9d9-4140-a232-64a9a46f3149"}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 07 Mar 2024 20:36:50 GMT
+      - Fri, 08 Mar 2024 10:10:56 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '408'
+      - '400'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-03-07'
+      - '2024-03-08'
       vary:
       - accept-encoding
     status:
