--- a/tests/integration/request/cassettes/test_request_service/TestRequestService.test_create_retrieve_delete_chat_record.yaml
+++ b/tests/integration/request/cassettes/test_request_service/TestRequestService.test_create_retrieve_delete_chat_record.yaml
@@ -14,24 +14,24 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/chat?version=2024-03-07
+    uri: https://api.com/v2/text/chat?version=2024-03-08
   response:
     body:
-      string: '{"id":"f1a2b95c-e1f2-4e42-9fac-b6168d092b0c","model_id":"google/flan-t5-xl","created_at":"2024-03-07T20:36:57.874Z","results":[{"generated_text":"All
-        right, what can I do for you?","generated_token_count":10,"input_token_count":15,"stop_reason":"max_tokens","seed":3334987880}],"conversation_id":"b5210561-d28c-42c3-a1e7-d118b2649225"}'
+      string: '{"id":"26f19e2f-c3d7-407f-a098-e3f210a26f6a","model_id":"google/flan-t5-xl","created_at":"2024-03-08T10:11:11.345Z","results":[{"generated_text":"Yes
+        You are very beautiful young lady, I like","generated_token_count":10,"input_token_count":15,"stop_reason":"max_tokens","seed":3435574986}],"conversation_id":"8ab8243a-785e-4aae-95ce-233a32600caa"}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 07 Mar 2024 20:36:57 GMT
+      - Fri, 08 Mar 2024 10:11:11 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '335'
+      - '347'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-03-07'
+      - '2024-03-08'
       vary:
       - accept-encoding
     status:
@@ -47,25 +47,25 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/chat/b5210561-d28c-42c3-a1e7-d118b2649225?version=2024-03-07
+    uri: https://api.com/v2/requests/chat/8ab8243a-785e-4aae-95ce-233a32600caa?version=2024-03-08
   response:
     body:
-      string: '{"results":[{"id":"f1a2b95c-e1f2-4e42-9fac-b6168d092b0c","duration":356,"request":{"messages":[{"role":"user","content":"Hello
-        Marvin, how are you today?"}],"model_id":"google/flan-t5-xl","parameters":{"max_new_tokens":10},"conversation_id":"b5210561-d28c-42c3-a1e7-d118b2649225"},"status":"success","created_at":"2024-03-07T20:36:58.000Z","response":{"id":"f1a2b95c-e1f2-4e42-9fac-b6168d092b0c","results":[{"seed":3334987880,"stop_reason":"max_tokens","generated_text":"All
-        right, what can I do for you?","input_token_count":15,"generated_token_count":10}],"model_id":"google/flan-t5-xl","created_at":"2024-03-07T20:36:57.874Z","conversation_id":"b5210561-d28c-42c3-a1e7-d118b2649225"},"version":{"api":"v2","date":"2024-03-07"}}]}'
+      string: '{"results":[{"id":"26f19e2f-c3d7-407f-a098-e3f210a26f6a","duration":405,"request":{"messages":[{"role":"user","content":"Hello
+        Marvin, how are you today?"}],"model_id":"google/flan-t5-xl","parameters":{"max_new_tokens":10},"conversation_id":"8ab8243a-785e-4aae-95ce-233a32600caa"},"status":"success","created_at":"2024-03-08T10:11:11.000Z","response":{"id":"26f19e2f-c3d7-407f-a098-e3f210a26f6a","results":[{"seed":3435574986,"stop_reason":"max_tokens","generated_text":"Yes
+        You are very beautiful young lady, I like","input_token_count":15,"generated_token_count":10}],"model_id":"google/flan-t5-xl","created_at":"2024-03-08T10:11:11.345Z","conversation_id":"8ab8243a-785e-4aae-95ce-233a32600caa"},"version":{"api":"v2","date":"2024-03-08"}}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 07 Mar 2024 20:36:58 GMT
+      - Fri, 08 Mar 2024 10:11:12 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '732'
+      - '744'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-03-07'
+      - '2024-03-08'
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -87,7 +87,7 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/requests/chat/b5210561-d28c-42c3-a1e7-d118b2649225?version=2023-11-22
+    uri: https://api.com/v2/requests/chat/8ab8243a-785e-4aae-95ce-233a32600caa?version=2023-11-22
   response:
     body:
       string: ''
@@ -95,7 +95,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 07 Mar 2024 20:36:59 GMT
+      - Fri, 08 Mar 2024 10:11:13 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -121,7 +121,7 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/chat/b5210561-d28c-42c3-a1e7-d118b2649225?version=2024-03-07
+    uri: https://api.com/v2/requests/chat/8ab8243a-785e-4aae-95ce-233a32600caa?version=2024-03-08
   response:
     body:
       string: '{"results":[]}'
@@ -129,7 +129,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 07 Mar 2024 20:37:00 GMT
+      - Fri, 08 Mar 2024 10:11:14 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -137,7 +137,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-03-07'
+      - '2024-03-08'
       vary:
       - accept-encoding
       x-ratelimit-limit:
